# pyprt-geoservice

./: .gitignore  README.md
minimalPRT/: README.md  minimalPRT.Minimal.pyt.xml  minimalPRT.Tool.pyt.xml  minimalPRT.pyt  minimalPRT.pyt.xml  minimalPRT2.pyt
publishPyPRT/: README.md  caller.py  pyproject.toml  setback.Tool.pyt.xml  setback.pyt  setback.pyt.xml
publishPyPRT/setbackPerEdge/: __init__.py  dataTypes.py  debug.py  requirements.txt  setbackPerEdge.py  util_geometry.py
publishPyPRT/setbackPerEdge/prt/: README.md  __init__.py  prt.py  types.py
publishPyPRT/setbackPerEdge/rpk/: SetbackPerEdge.rpk
