[tool.poetry]
name = "setback-per-edge"
version = "0.1.0"
description = ""
authors = ["Daniel TAN <daniel_tan@ura.gov.sg>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
PyPRT = "1.7.0"
shapely = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
pytest-forked = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]